[package]
name = "bevy_button_transitions"
description = "Easy button transition styles"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/tigerplush/bevy_button_transitions"
homepage = "https://github.com/tigerplush/bevy_button_transitions"

[features]
default = ["bevy_reflect"]
bevy_reflect = ["dep:bevy_reflect", "bevy_ecs/bevy_reflect"]

[dependencies]
bevy_app = { version = "0.15", default-features = false }
bevy_asset = { version = "0.15", default-features = false }
bevy_color = { version = "0.15", default-features = false }
bevy_derive = { version = "0.15", default-features = false }
bevy_ecs = { version = "0.15", default-features = false }
bevy_image = { version = "0.15", default-features = false }
bevy_reflect = { version = "0.15", optional = true, default-features = false }
bevy_ui = { version = "0.15", default-features = false }

[dev-dependencies]
bevy = "0.15"
